--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,32 +7,38 @@
     Sign In page
 {% endblock title %}
 
-{% block content %}
-<style>
+{% block content %}<style>
     .btn-orange {
-    background-color: orange;
-    color: white;
-}
-
+        background-color: orange;
+        color: white;
+    }
 </style>
+
 <section style="margin-top: 100px;"></section>
-   <div class="container shadow lx py-5" style="margin-bottom: 100px;">
-    {% element h1 %}
-    {% trans "Sign In" %}
-{% endelement %}
-<p>
-    {% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}"><strong class="btn btn-primary" style="background-color: #392C7D;">sign up</strong></a> first.{% endblocktrans %}
-</p>
-{% url 'account_login' as login_url %}
-<form method="post" action="{% url 'account_login' %}" class="entrance login">
-    {% csrf_token %}
-    {{ form|crispy }}
-    {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <button class="btn btn-orange" type="submit">{% trans "Sign In" %}</button>
-</form>
-{% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
-   </div>
+
+<div class="container py-5 ">
+    <div class="row justify-content-center">
+        <div class="col-md-6 shadow-lg " style="padding: 10px;">
+            {% element h1 %}
+            {% trans "Sign In" %}
+            {% endelement %}
+            <p>
+                {% blocktrans %}If you have not created an account yet, then please
+                    <a href="{{ signup_url }}"><strong class="btn btn-primary" style="background-color: #392C7D;">sign up</strong></a>
+                    first.{% endblocktrans %}
+            </p>
+            {% url 'account_login' as login_url %}
+            <form method="post" action="{% url 'account_login' %}" class="entrance login">
+                {% csrf_token %}
+                {{ form|crispy }}
+                {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <button class="btn btn-orange" type="submit">{% trans "Sign In" %}</button>
+            </form>
+            {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
