--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -66,7 +66,10 @@
     
 
     
-<div class="container shadow-lg p-3 mb-5 bg-white rounded" style="margin-top: 130px;">  
+<div class="container center p-2 mb-5 bg-white rounded" style="margin-top: 130px;">
+    <div class="row justify-content-center">
+    <div class="col-md-6 shadow-lg " style="padding: 10px;">
+
     <h2>Register User Page</h2>
     <p style="background-color: red; color:white;">Username & email must be unique for creating an account. Without email verification, the account will be deleted after a few days.</p>
     {% if form.errors %}
@@ -81,6 +84,9 @@
         <button style="border-radius: 5px;" type="submit" class="btn btn-primary"><i class="fa fa-user-plus"></i> Sign Up</button>
         <a  href="{% url 'profile' %}" style="border-radius: 5px;" type="submit" class="btn btn-primary"><i class="fa fa-user-plus"></i> Login</a>
     </form>
+    </div> 
+</div> 
+   
 
 </div>
 {% endblock content %}
