--- a/templates/course_card.html
+++ b/templates/course_card.html
@@ -1,7 +1,6 @@
 {% load static %}
 
-{% for course in courses %}
-       
+  
 <div class="col-lg-4 col-md-6 d-flex">
     <div class="course-box d-flex aos" data-aos="fade-up">
       <div class="product">
@@ -22,20 +21,27 @@
         <div class="product-content">
           <div class="course-group d-flex">
             <div class="course-group-img d-flex">
-              <a href="instructor-profile.html"
-                ><img
-                  src="{{course.author.image.url}}"
-                  alt="{{course.author.name}}"
-                  class="img-fluid"
-              /></a>
-              <div class="course-name">
-                <h4>
-                  <a href="instructor-profile.html">{{course.author.name}}</a>
-                </h4>
-                <p>{{course.author.designation}}</p>
-              </div>
-            </div>          
-          </div>
+                {% if course.author.slug %}
+                    <a href="{% url 'author_details' course.author.slug %}">
+                        <img src="{{ course.author.image.url }}" alt="{{ course.author.name }}" class="img-fluid" />
+                    </a>
+                    <div class="course-name">
+                        <h4>
+                            <a href="{% url 'author_details' course.author.slug %}">{{ course.author.name }}</a>
+                        </h4>
+                        <p>{{ course.author.designation }}</p>
+                    </div>
+                {% else %}
+                    <!-- Handle the case where author.slug is empty or None -->
+                    <img src="{{ course.author.image.url }}" alt="{{ course.author.name }}" class="img-fluid" />
+                    <div class="course-name">
+                        <h4>{{ course.author.name }}</h4>
+                        <p>{{ course.author.designation }}</p>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+        
           <h3 class="title instructor-text">
             <a href="{% url 'course_details' course.slug %}"
               >{{course.title}}</a
@@ -61,4 +67,3 @@
       </div>
     </div>
 </div> 
-{% endfor %}
