--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -1,90 +1,99 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends 'base.html' %} {% load static %} 
+{% block title %} Saved Courses Page{% endblock title %} {% block content %}
 
-{% block title %}
-Saved Courses Page    
-{% endblock title %}
-    
-{% block content %}
+<div class="container py-5" style="margin-top: 100px;">
+  <div>{% if messages %} {% include 'message.html' %} {% endif %}</div>
 
-<style>
-    /* Custom styles for the saved courses page */
-    .container {
-        text-align: center;
-    }
-
-    .saved-courses-heading {
-        padding-bottom: 15px;
-    }
-
-    .wishlist-columns {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-        justify-content: center; /* Center the columns */
-        margin-top: 20px; /* Add some space at the top */
-    }
-
-    .wishlist-item {
-        flex: 0 0 calc(33.33% - 20px); /* Adjust width based on the number of columns */
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        overflow: hidden;
-    }
-
-    .wishlist-thumbnail img {
-        width: 100%;
-        height: auto;
-        border-radius: 8px 8px 0 0; /* Rounded corners for the top */
-    }
-
-    .wishlist-details {
-        padding: 15px;
-    }
-
-    .wishlist-actions {
-        text-align: center;
-        margin-top: 10px;
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 767px) {
-        .wishlist-item {
-            flex: 0 0 calc(50% - 20px); /* Adjust width for smaller screens */
-        }
-    }
-</style>
-
-<div class="container py-5" style="margin-top: 50px;">
-    <div>
-        {% if messages %}
-            {% include 'message.html' %}
-        {% endif %}
-    </div>
-
-    <div class="saved-courses-heading">
-        <h2>{{ user.username }}'s Saved Courses <i class="fa fa-bookmark"></i></h2>
-        <p>Number of Saved Courses: {{ wishlist.courses.count }}</p>
-    </div>
-
-    {% if wishlist %}
-        <div class="wishlist-columns">
-            {% for course in wishlist.courses.all %}
-                <div class="wishlist-item">
-                    <div class="wishlist-thumbnail">
-                        <img src="{{ course.banner.url }}" alt="{{ course.title }}">
-                    </div>
-                    <div class="wishlist-details">
-                        <h6><a href="{% url 'course_details' slug=course.slug %}">{{ course.title }}</a></h6>
-                        <div class="wishlist-actions">
-                            <a href="{% url 'remove_from_wishlist' slug=course.slug %}" class="btn btn-danger"><i class="fa fa-trash"></i> Remove</a>
-                        </div>
-                    </div>
+  <div class="saved-courses-heading">
+    <h2>{{ user.username }}'s Saved Courses <i class="fa fa-bookmark"></i></h2>
+    <p>Number of Saved Courses: {{ wishlist.courses.count }}</p>
+  </div>
+  <hr />
+  {% if wishlist %}
+  <div class="row">
+    {% for course in wishlist.courses.all %}
+    <div class="col-lg-4 col-md-6 d-flex" >
+        <div  class="course-box d-flex aos" data-aos="fade-up" style="border: 1px solid lightgray;">
+          <div class="product" >
+            <div class="product-img">
+              <a href="{% url 'course_details' course.slug %}">
+                <img
+                  class="img-fluid"
+                  style="width: 380px; height: 255px"
+                  alt="{{course.title}}"
+                  src="{{course.banner.url}}"
+                />
+              </a>
+              <div class="price">
+                <h3>{{ course.price|default:"Free" }} &#2547;</h3>
+              </div>
+            </div>
+            <div class="product-content">
+              <div class="course-group d-flex">
+                <div class="course-group-img d-flex">
+                  {% if course.author.slug %}
+                  <a href="{% url 'author_details' course.author.slug %}">
+                    <img
+                      src="{{ course.author.image.url }}"
+                      alt="{{ course.author.name }}"
+                      class="img-fluid"
+                    />
+                  </a>
+                  <div class="course-name">
+                    <h4>
+                      <a href="{% url 'author_details' course.author.slug %}"
+                        >{{ course.author.name }}</a
+                      >
+                    </h4>
+                    <p>{{ course.author.designation }}</p>
+                  </div>
+                  {% else %}
+                  <!-- Handle the case where author.slug is empty or None -->
+                  <img
+                    src="{{ course.author.image.url }}"
+                    alt="{{ course.author.name }}"
+                    class="img-fluid"
+                  />
+                  <div class="course-name">
+                    <h4>{{ course.author.name }}</h4>
+                    <p>{{ course.author.designation }}</p>
+                  </div>
+                  {% endif %}
                 </div>
-            {% endfor %}
+              </div>
+  
+              <h3 class="title instructor-text">
+                <a href="{% url 'course_details' course.slug %}"
+                  >{{course.title}}</a
+                >
+              </h3>
+              <div class="course-info d-flex align-items-center">
+                <div class="rating-img d-flex align-items-center">
+                  <img src="{% static 'assets/img/icon/icon-01.svg' %}" alt />
+                  <p>{{course.videos.all.count }} Lessons</p>
+                </div>
+                <div class="course-view d-flex align-items-center">
+                  <img src="{% static 'assets/img/icon/icon-02.svg' %}" alt />
+                  <p>{{course.duration}} Hours</p>
+                </div>
+              </div>
+            </div>
+            <div class="wishlist-actions">
+              <a
+                href="{% url 'remove_from_wishlist' slug=course.slug %}"
+                class="btn btn-danger"
+                ><i class="fa fa-trash"></i> Remove</a
+              >
+            </div>
+          </div>
         </div>
-    {% else %}
-        <p>No Courses in the wishlist.</p>
-    {% endif %}
+      </div>
+    {% endfor %}
+  </div>
+{% else %}
+<div class="row">
+    <p>No Courses in the wishlist.</p>
+</div>
+{% endif %}
 </div>
 {% endblock %}
