fix design issue everything isok

--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -59,17 +59,8 @@
         <div class="col-lg-8">
           <div class="card overview-sec">
             <div class="card-body">
-              <h5 class="subs-title">Overview</h5>
-              <h6>Course Description</h6>
-              <p>description here </p>             
-             
-              <h6>What you'll learn</h6>
-              <p>lear here point </p>
-            
-              <h6>Requirements</h6>
-              <ul class="mb-0">
-               <li>requiremnt here </li>
-              </ul>
+              <p>{{course.course_details|safe}}</p>
+              
             </div>
           </div>
 
