--- a/templates/courses.html
+++ b/templates/courses.html
@@ -20,8 +20,8 @@
           <h2>Featured Courses</h2>
         </div>
       </div>
-      <div class="col-md-6">
-        <form class="form-inline" method="GET" action="{% url 'search' %}">
+      <div class="col-md-6 ">
+        <form class="form-inline shadow-sm" method="GET" action="{% url 'search' %}">
           <div class="input-group align-items-stretch">
               <input type="text" class="form-control" placeholder="Search Course, Category, Author, etc" name="search">
               <div class="input-group-append">
