--- a/templates/hero.html
+++ b/templates/hero.html
@@ -5,8 +5,8 @@
         <div class="col-md-7">
           <div class="home-slide-face aos" data-aos="fade-up" style="padding-top: 50px;" >
               
-            <div class="container mt-3">
-              <form class="form-inline" method="GET" action="{% url 'search' %}">
+            <div class=" mt-3 shadow-sm">
+              <form class="form-inline " method="GET" action="{% url 'search' %}">
                 <div class="input-group align-items-stretch">
                     <input type="text" class="form-control" placeholder="Search Course, Category, Author, etc" name="search">
                     <div class="input-group-append">
@@ -47,10 +47,10 @@
               
             <ul class="nav header-navbar-rht">
               <li class="nav-item">
-                <a class="login-head button" href="{% url 'profile' %}">Login</a>
+                <a class="login-head button shadow-lg" href="{% url 'profile' %}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="signin-head" href="{% url 'account_signup' %}">Sign up</a>
+                <a class="signin-head shadow-lg" href="{% url 'account_signup' %}">Sign up</a>
               </li>
             </ul>
             </div>
