--- a/templates/home.html
+++ b/templates/home.html
@@ -43,8 +43,8 @@
 
                
             </div>
-            <div class="all-btn all-category d-flex align-items-center">
-                <a href="{% url 'courses' %}" class="btn btn-primary">All Courses</a>
+            <div class="all-btn all-category d-flex align-items-center ">
+                <a href="{% url 'courses' %}" class="btn btn-primary shadow-lg">All Courses</a>
               </div>
           
         </div>
