--- a/templates/course_card.html
+++ b/templates/course_card.html
@@ -1,8 +1,8 @@
 {% load static %}
 
   
-<div class="col-lg-4 col-md-6 d-flex">
-    <div class="course-box d-flex aos" data-aos="fade-up">
+<div class="col-lg-4 col-md-6 d-flex ">
+    <div class="course-box d-flex aos shadow-lg" data-aos="fade-up">
       <div class="product">
         <div class="product-img">
           <a href="{% url 'course_details' course.slug %}">
