--- a/templates/total_counter.html
+++ b/templates/total_counter.html
@@ -5,8 +5,8 @@
       <div class="course-widget">
         <div class="row">         
           <div class="col-lg-4 col-md-6 d-flex">
-            <div class="course-full-width">
-              <div class="blur-border course-radius aos" data-aos="fade-up">
+            <div class="course-full-width ">
+              <div class="blur-border course-radius aos shadow-sm" data-aos="fade-up">
                 <div class="online-course d-flex align-items-center">
                   <div class="course-img">
                     <img src="{% static 'assets/img/cources-icon.svg' %}" alt />
@@ -21,7 +21,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="course-full-width">
-              <div class="blur-border course-radius aos" data-aos="fade-up">
+              <div class="blur-border course-radius aos shadow-sm" data-aos="fade-up">
                 <div class="online-course d-flex align-items-center">
                   <div class="course-img">
                     <img src="{% static 'assets/img/certificate-icon.svg' %}" alt />
@@ -36,7 +36,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="course-full-width">
-              <div class="blur-border course-radius aos" data-aos="fade-up">
+              <div class="blur-border course-radius aos shadow-sm" data-aos="fade-up">
                 <div class="online-course d-flex align-items-center">
                   <div class="course-img">
                     <img src="{% static 'assets/img/gratuate-icon.svg' %}" alt />
