--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -68,7 +68,7 @@
     
 <div class="container center p-2 mb-5 bg-white rounded" style="margin-top: 130px;">
     <div class="row justify-content-center">
-    <div class="col-md-6 shadow-lg " style="padding: 10px;">
+    <div class="col-md-6 shadow-lg " style="padding: 10px; border-radius: 2%;">
 
     <h2>Register User Page</h2>
     <p style="background-color: red; color:white;">Username & email must be unique for creating an account. Without email verification, the account will be deleted after a few days.</p>
