--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -18,7 +18,7 @@
 
 <div class="container py-5 ">
     <div class="row justify-content-center">
-        <div class="col-md-6 shadow-lg " style="padding: 10px;">
+        <div class="col-md-6 shadow-lg " style="padding: 10px; border-radius: 2%;">
             {% element h1 %}
             {% trans "Sign In" %}
             {% endelement %}
