--- a/templates/author_list.html
+++ b/templates/author_list.html
@@ -2,29 +2,6 @@
 {% load static %}
 {% block title %} Home Page
 {%endblock title %} {% block content %}
-<div class="container" style="margin-top: 150px;">
-    <h1>All Tutors ({{ author_count }})</h1>
-    <hr>
-    <div class="row">
-        {% for author in authors %}
-            <div class="col-md-4 mb-3 "  style="display: flex; align-items: center; justify-content: center;">
-                <a href="{% url 'author_details' author.slug %}" class="author-card text-decoration-none shadow-sm">
-                    <!-- Left side (Image) -->
-                    <div style="flex-shrink: 0; margin-right: 20px;">
-                        <img style="width: 150px; height: 150px; border-radius: 10%; " src="{{ author.image.url }}" alt="{{ author.name }} Image">
-                    </div>
-
-                    <!-- Right side (Name and Designation) -->
-                    <div>
-                        <h1 style="font-size: 24px; margin-bottom: 10px;">{{ author.name }}</h1>
-                        <p style="font-size: 18px; color: #777;">{{ author.designation }}</p>
-                    </div>
-                </a>
-            </div>
-        {% endfor %}
-    </div>
-</div>
-
 <style>
     .author-card {
         display: flex;
@@ -41,10 +18,33 @@
         background-color: #e0e0e0;  /* Change the color for the hover effect */
     }
 
-    .author-info {
-        /* No need for padding-right */
-    }
+   
 </style>
+
+<div class="container" style="margin-top: 150px;">
+    <h1>All Tutors ({{ author_count }})</h1>
+    <hr>
+    <div class="row">
+        {% for author in authors %}
+            <div class="col-md-4 mb-3  "   style="display: flex; align-items: center; justify-content: center;">
+                <a href="{% url 'author_details' author.slug %}" class="author-card text-decoration-none shadow-sm">
+                    <!-- Left side (Image) -->
+                    <div style="flex-shrink: 0; margin-right: 20px;">
+                        <img style="width: 150px; height: 150px; border-radius: 10%; " src="{{ author.image.url }}" alt="{{ author.name }} Image">
+                    </div>
+
+                    <!-- Right side (Name and Designation) -->
+                    <div>
+                        <h1 style="font-size: 24px; margin-bottom: 10px;">{{ author.name }}</h1>
+                        <p style="font-size: 18px; color: #777;">{{ author.designation }}</p>
+                        <p>Total Courses: {{ author.total_courses }} </p>
+                    </div>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+
 
 
 
