--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
               </span>
             </a>
             <a href="{% url 'home' %}" class="navbar-brand logo ">
-              <img  src="{% static 'assets/img/myimg/logo.png' %}" class="myimg " alt="Logo" />
+              <img  src="{% static 'assets/img/myimg/logo.png' %}" class="myimg" alt="Logo" />
             </a>
           </div>
           <div class="main-menu-wrapper">
@@ -68,8 +68,8 @@
                  
                     <!-- Add other navigation links as needed -->
          
-                  <li><a href="#">About Us</a></li>                 
-                  <li><a href="#">Contact Us</a></li> 
+                  <li><a href="{% url 'about' %}">About Us</a></li>                 
+                  <li><a href="{% url 'contact' %}">Contact Us</a></li> 
                 </ul>
               </li> 
              
