--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -1,13 +1,9 @@
-<!-- search_result.html -->
-
-<!-- search_result.html -->
-
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
 <div class="container">
     <section style="margin-top: 150px;">
-        <h2>Total found {{search_results_count}} results for  "{{ search_key }}"</h2>
+        <h2>Total found {{search_results_count}} results for <i class="fa-brands fa-searchengin"></i>  "{{ search_key }}"</h2>
     </section>
 
     <div class="row">
