video playing issue solve

--- a/templates/author_list.html
+++ b/templates/author_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% load static %}
-{% block title %} Home Page
+{% block title %}Teacher's Page
 {%endblock title %} {% block content %}
 <style>
     .author-card {
@@ -22,7 +22,7 @@
 </style>
 
 <div class="container" style="margin-top: 150px;">
-    <h1>All Tutors ({{ author_count }})</h1>
+    <h1>All Lecturer's ({{ author_count }})</h1>
     <hr>
     <div class="row">
         {% for author in authors %}
@@ -36,8 +36,10 @@
                     <!-- Right side (Name and Designation) -->
                     <div>
                         <h1 style="font-size: 24px; margin-bottom: 10px;">{{ author.name }}</h1>
-                        <p style="font-size: 18px; color: #777;">{{ author.designation }}</p>
-                        <p>Total Courses: {{ author.total_courses }} </p>
+                        <h6 style="font-size: 18px; color: #777;">{{ author.designation }}</h6>
+                        <h6>{{ author.phone_number }}</h6>
+                        <h6>{{ author.email }} </h6>
+                        <span>Total Courses: {{ author.total_courses }} </span>
                     </div>
                 </a>
             </div>
