--- a/templates/footer.html
+++ b/templates/footer.html
@@ -35,7 +35,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     <a  class="text-white" target="_blank" href="https://ugv.edu.bd/">© 2024 Copyright By University Of Global Village, Barishal</a> ||
-    <a class="text-white"  href="">About Us</a> ||
+    <a class="text-white"  href="{% url 'about' %}">About Us</a> ||
     <a class="text-white" target="_blank" href="https://www.facebook.com/moniruldevelopers"> Developed By Monirul Islam</a>
   </div>
   <!-- Copyright -->
