--- a/templates/author_details.html
+++ b/templates/author_details.html
@@ -20,7 +20,9 @@
     <!-- Right side (Name and Designation) -->
     <div>
         <h1 style="font-size: 24px; margin-bottom: 10px;">{{ author.name }}</h1>
-        <p style="font-size: 18px; color: #777;">{{ author.designation }}</p>
+        <h6 style="font-size: 18px; color: #777;">{{ author.designation }}</h6>
+        <h6>{{ author.phone_number }}</h6>
+        <h6>{{ author.email }} </h6>
     </div>
 
 </div>
