--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,10 @@
       
     {% endblock title %}
       </title>
+   
+    <link rel="icon" href="{% static 'assets/img/myimg/fabicon(3).png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/myimg/fabicon(3).png' %}" type="image/x-icon">
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="assets/img/favicon.svg"
-    />
 
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}" />
 
