--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,14 +17,14 @@
  
  <section>
     <h1 style="text-align: center; margin-top:10px;">Enrolled Courses</h1>
-    <div class="row shadow-sm"> 
+    <div class="row "> 
         {% if user_enrollments %}
         <ul>
             <div class="row">  
             {% for enrollment in user_enrollments reversed %}
              <div class="col-lg-3 ">
                 <div class="course-box d-flex aos" data-aos="fade-up">
-                    <div class="product">
+                    <div class="product shadow-lg">
                     <div class="product-img">
                         <a href="{% url 'course_playlist' course_slug=enrollment.course.slug %}">
                         <img
