--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+
   <header class="header header-two">
     <div class="header-fixed">
       <nav class="navbar navbar-expand-lg header-nav scroll-sticky">
@@ -34,20 +35,20 @@
             </div>
             <ul class="main-nav">             
               <li class="has-submenu menu-effect active">                
-                <li><a href="{% url 'home' %}">Home <i class="fa-solid fa-house"></i></a></li>
+                <li><a href="{% url 'home' %}">Home <i class="fa-solid fa-house" style="font-size: 16px;"></i></a></li>
               </li>
               <li class="has-submenu menu-effect active">                
-                <li><a href="{% url 'author_list' %}">Teacher's <i class="fas fa-chalkboard-teacher"></i></a></li>
+                <li><a href="{% url 'author_list' %}">Teacher's <i class="fas fa-chalkboard-teacher" style="font-size: 16px;"></i></a></li>
               </li>
              
 
               <li class="has-submenu menu-effect active">              
-                <li><a href="{% url 'courses' %}">Courses <i class="fa-solid fa-book-open-reader"></i></a></li>
+                <li><a href="{% url 'courses' %}">Courses <i class="fa-solid fa-book-open-reader" style="font-size: 16px;"></i></a></li>
               </li>
 
 
               <li class="has-submenu menu-effect" >
-                <a href="javascript:void(0)">Category <i class="fa-solid fa-list"></i></a>
+                <a href="javascript:void(0)">Category <i class="fa-solid fa-list" style="font-size: 16px;"></i></a>
                 <ul class="submenu" aria-labelledby="navbarDropdown" style="max-height: 300px; overflow-y: auto;">
                     <!-- {% for category in categories %}
                         <li><a href="{% url 'category_courses' category.slug %}">{{ category.title }}  ({{ category_count.course_count }} courses)</a></li>
@@ -63,13 +64,13 @@
 
 
               <li class="has-submenu menu-effect">
-                <a href="javascript:void(0)">Info <i class="fa-solid fa-circle-info"></i></a>
+                <a href="javascript:void(0)">Info <i class="fa-solid fa-circle-info" style="font-size: 16px;"></i></a>
                 <ul class="submenu">
                  
                     <!-- Add other navigation links as needed -->
          
-                  <li><a href="{% url 'about' %}">About Us</a></li>                 
-                  <li><a href="{% url 'contact' %}">Contact Us</a></li> 
+                  <li><a href="{% url 'about' %}"><i class="fa-solid fa-circle-info"></i> About Us</a></li>                 
+                  <li><a href="{% url 'contact' %}"><i class="fa-solid fa-address-book"></i> Contact Us</a></li> 
                 </ul>
               </li> 
              
@@ -77,7 +78,7 @@
                  
               {% if request.user.is_authenticated %}  
               <li class="has-submenu menu-effect">
-                <a href="javascript:void(0)"> {{request.user.username}}<i class="fas fa-chevron-down"></i></a>
+                <a href="javascript:void(0)"> {{request.user.username}}<i class="fa-solid fa-circle-chevron-down" style="font-size: 16px;"></i></a>
                 <ul class="submenu">
                   <li><a href="{% url 'dashboard' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Enrolled Courses</a></li>                 
                   <li><a href="{% url 'wishlist' %}"><i class="fa fa-bookmark"></i> Wishlist Courses</a></li>
