--- a/templates/header.html
+++ b/templates/header.html
@@ -49,7 +49,7 @@
 
               <li class="has-submenu menu-effect" >
                 <a href="javascript:void(0)">Category <i class="fa-solid fa-list" style="font-size: 16px;"></i></a>
-                <ul class="submenu" aria-labelledby="navbarDropdown" style="max-height: 300px; overflow-y: auto;">
+                <ul class="submenu">
                     <!-- {% for category in categories %}
                         <li><a href="{% url 'category_courses' category.slug %}">{{ category.title }}  ({{ category_count.course_count }} courses)</a></li>
                     {% endfor %} -->                    
@@ -88,7 +88,7 @@
               </li> 
               {% else %}  
               <li class="has-submenu menu-effect">
-                <a href="javascript:void(0)">Account <i class="fa-solid fa-user-lock"></i></a>
+                <a href="javascript:void(0)">Account <i class="fa-solid fa-user-lock" style="font-size: 16px;"></i></a>
                 <ul class="submenu">
                  
                     <!-- Add other navigation links as needed -->
