--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
     {% endblock title %}
       </title>
    
-    <link rel="icon" href="{% static 'assets/img/myimg/fabicon(3).png' %}" type="image/x-icon">
-    <link rel="shortcut icon" href="{% static 'assets/img/myimg/fabicon(3).png' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'assets/img/myimg/fab.ico' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/myimg/fab.ico' %}" type="image/x-icon">
 
 
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}" />
