--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="product-content">
                         <div class="course-group d-flex">
-                        <div class="course-group-img d-flex">
+                        <!-- <div class="course-group-img d-flex">
                             <img
                                 src="{{enrollment.course.author.image.url}}"
                                 alt="{{enrollment.course.author.name}}"
@@ -51,8 +51,29 @@
                             </h4>
                             <p>{{enrollment.course.author.designation}}</p>
                             </div>
-                        </div>                      
+                        </div>                       -->
+                        <div class="course-group-img d-flex">
+                            {% if enrollment.course.author.slug %}
+                                <a href="{% url 'author_details' enrollment.course.author.slug %}">
+                                    <img src="{{ enrollment.course.author.image.url }}" alt="{{ enrollment.course.author.name }}" class="img-fluid" />
+                                </a>
+                                <div class="course-name">
+                                    <h4>
+                                        <a href="{% url 'author_details' enrollment.course.author.slug %}">{{ enrollment.course.author.name }}</a>
+                                    </h4>
+                                    <p>{{ enrollment.course.author.designation }}</p>
+                                </div>
+                            {% else %}
+                                <!-- Handle the case where author.slug is empty or None -->
+                                <img src="{{ enrollment.course.author.image.url }}" alt="{{ enrollment.course.author.name }}" class="img-fluid" />
+                                <div class="course-name">
+                                    <h4>{{ enrollment.course.author.name }}</h4>
+                                    <p>{{ enrollment.course.author.designation }}</p>
+                                </div>
+                            {% endif %}
                         </div>
+                        
+                    </div>
                         <h3 class="title instructor-text">
                         <a href="{% url 'course_playlist' course_slug=enrollment.course.slug %}"
                             >{{enrollment.course.title}}</a
