--- a/templates/hero.html
+++ b/templates/hero.html
@@ -42,10 +42,10 @@
               
             <ul class="nav header-navbar-rht">
               <li class="nav-item">
-                <a class="login-head button shadow-lg" href="{% url 'profile' %}">Login</a>
+                <a class="login-head button" href="{% url 'profile' %}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="signin-head shadow-lg" href="{% url 'account_signup' %}">Sign up</a>
+                <a class="signin-head" href="{% url 'account_signup' %}">Sign up</a>
               </li>
             </ul>
             </div>
