playing icon add

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,8 @@
     <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}" />
 
   </head>
-  <body >
+  <body>
+    <!-- oncontextmenu="return false;" -->
     <div class="main-wrapper">
 
       {% include 'header.html' %}      
