--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 {% load static %}
 
   <header class="header header-two">
-    <div class="header-fixed">
+    <div class="header-fixed">     
       <nav class="navbar navbar-expand-lg header-nav scroll-sticky">
-        <div class="container">
+        <div class="container">         
           <div class="navbar-header">
             <a id="mobile_btn" href="javascript:void(0);">
               <span class="bar-icon">
@@ -39,6 +39,9 @@
               </li>
               <li class="has-submenu menu-effect active">                
                 <li><a href="{% url 'author_list' %}">Teacher's <i class="fas fa-chalkboard-teacher" style="font-size: 16px;"></i></a></li>
+              </li>
+              <li class="has-submenu menu-effect active">                
+                <li><a href="{% url 'author_list' %}">Blog's <i class="fa-solid fa-blog" style="font-size: 16px;"></i></a></li>
               </li>
              
 
