--- a/templates/header.html
+++ b/templates/header.html
@@ -34,22 +34,20 @@
               </a>
             </div>
             <ul class="main-nav">             
-              <li class="has-submenu menu-effect active">                
-                <li><a href="{% url 'home' %}">Home <i class="fa-solid fa-house" style="font-size: 16px;"></i></a></li>
+              <li class="has-submenu menu-effect">                
+                <a href="{% url 'home' %}">Home <i class="fa-solid fa-house" style="font-size: 16px;"></i></a>
               </li>
-              <li class="has-submenu menu-effect active">                
-                <li><a href="{% url 'author_list' %}">Teacher's <i class="fas fa-chalkboard-teacher" style="font-size: 16px;"></i></a></li>
-              </li>
-              <li class="has-submenu menu-effect active">                
-                <li><a href="{% url 'author_list' %}">Blog's <i class="fa-solid fa-blog" style="font-size: 16px;"></i></a></li>
-              </li>
-             
+              <li><a href="{% url 'author_list' %}">Blog's <i class="fa-solid fa-blog" style="font-size: 16px;"></i></a></li>
 
-              <li class="has-submenu menu-effect active">              
-                <li><a href="{% url 'courses' %}">Courses <i class="fa-solid fa-book-open-reader" style="font-size: 16px;"></i></a></li>
+              <li class="has-submenu menu-effect ">                
+                <a href="{% url 'author_list' %}">Teacher's <i class="fas fa-chalkboard-teacher" style="font-size: 16px;"></i></a>
               </li>
+              <!-- <li class="has-submenu menu-effect active">                
+              </li> -->            
 
-
+              <li class="has-submenu menu-effect ">              
+                <a href="{% url 'courses' %}">Courses <i class="fa-solid fa-book-open-reader" style="font-size: 16px;"></i></a>
+              </li>
               <li class="has-submenu menu-effect" >
                 <a href="javascript:void(0)">Category <i class="fa-solid fa-list" style="font-size: 16px;"></i></a>
                 <ul class="submenu">
@@ -58,27 +56,16 @@
                     {% endfor %} -->                    
                       {% for category_count in category_counts %}
                           <li><a href="{% url 'category_courses' category_count.category.slug %}">{{ category_count.category.title }} ({{ category_count.course_count }} courses)</a></li>
-                      {% endfor %}
-
-                  
+                      {% endfor %}                  
                 </ul>
               </li>
-
-
-
               <li class="has-submenu menu-effect">
                 <a href="javascript:void(0)">Info <i class="fa-solid fa-circle-info" style="font-size: 16px;"></i></a>
-                <ul class="submenu">
-                 
-                    <!-- Add other navigation links as needed -->
-         
+                <ul class="submenu"> 
                   <li><a href="{% url 'about' %}"><i class="fa-solid fa-circle-info"></i> About Us</a></li>                 
                   <li><a href="{% url 'contact' %}"><i class="fa-solid fa-address-book"></i> Contact Us</a></li> 
                 </ul>
               </li> 
-             
-            
-                 
               {% if request.user.is_authenticated %}  
               <li class="has-submenu menu-effect">
                 <a href="javascript:void(0)"> {{request.user.username}}<i class="fa-solid fa-circle-chevron-down" style="font-size: 16px;"></i></a>
