fix design issue and add

--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -10,6 +10,9 @@
 
 
 <div class="inner-banner" style="margin-top: 150px ;">
+  {% if messages %}
+      {% include 'message.html' %}
+      {% endif %}
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
