--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -116,49 +116,29 @@ body{
 { 
     .container{
         grid-template-columns: 1.5fr 1fr;
-        padding: 10px;
-    
+        padding: 10px;    
     }
-    
-
 }
-
-@media(max-width:768px)
-{ 
-    /* .container{
-        grid-template-columns:  1fr;    
-    } */
-
+@media (max-width: 768px) {
     .container {
-            display: block;
-              /* Switch to a block layout on smaller screens */
-        
-        }
-
-        .main-video {
-            position: sticky;
-            top: 0;
-            z-index: 10001; /* Set a high z-index to make sure it appears above other elements */
-        }
-
-        .video-list {
-            margin-top: 10px; /* Add some space below the sticky video */
-        }
-        
+        display: block;
+    }
+    .main-video {
+        position: sticky;
+        top: 60px; 
+        z-index: 1;     
+    }
+    .video-list {
+        margin-top: 10px; 
+    }
 }
-
-
 
 </style>
 <div class="container"  >
     <p style="margin-top: 110px;">Course Playlist <img src="{% static 'assets/img/icon/video.svg' %}" class="me-2" alt=""> {{course.title}}</p>
-</div>
-
-
-
-    
-<div class="container" style="margin-bottom: 50px;">
-    <div class="main-video shadow-lg  ">
+</div>  
+<div class="container myvideo" style="margin-bottom: 50px;">
+    <div class="main-video">
         <div class="video">
             <video oncontextmenu="return false;" id="mainVideo" controls  autoplay></video>
                            
@@ -166,7 +146,7 @@ body{
                 {% if video_clicked %}
                     {{ video_title }}
                 {% else %}
-                    Click Listed Video For Play
+                Click the Listed Video To View
                 {% endif %}
             </h3>
                 
@@ -185,7 +165,7 @@ body{
             </div>
         </div>
     </div>
-    <div class="video-list shadow-lg">
+    <div class="video-list ">
         {% for video in course.videos.all %}
             <div class="vid{% if forloop.first %} active{% endif %}">
                 <video oncontextmenu="return false;" class="playlist-video" src="{{ video.video_file.url }}" muted></video>
