page design fix

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,50 +1,10 @@
+
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} About page{%endblock title %}
-
+{% block title %}About Page{% endblock title %} 
 {% block content %}
-<style>
-  .author-card {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: left;
-    background-color: #f8f9fa;
-    padding: 10px;
-    border-radius: 10px;
-    transition: background-color 0.3s;
-  }
 
-  .author-card:hover {
-    background-color: #e0e0e0;
-  }
-
-  .author-card img {
-    width: 150px;
-    height: 150px;
-    border-radius: 10%;
-    margin-right: 20px;
-  }
-
-  .author-details {
-    flex-grow: 1;
-  }
-
-  @media (max-width: 768px) {
-    .author-card {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-
-    .author-card img {
-      margin-right: 0;
-      margin-bottom: 10px;
-    }
-  }
-</style>
-
-<div class="container" style="margin-top: 150px">
+<div class="container" style="margin-top: 150px;">
   <h3>Details Our Dedicated Team of Developers</h3>
   <p>
     At UGV Courses, our success is fueled by the passion and expertise of our
@@ -53,26 +13,27 @@
     backgrounds to the table.
   </p>
   <hr />
-  <div class="row">
-    {% for person in teams reversed %}
-    <div class="col-md-6 mb-3">
-      <a href="{{ person.fb }}" class="author-card text-decoration-none shadow-sm">
-        <!-- Left side (Image) -->
-        <div>
-          <img src="{{ person.image.url }}" alt="{{ person.name }} Image">
-        </div>
-        <!-- Right side (Name and Designation) -->
-        <div class="author-details">
-          <h1 style="font-size: 24px; margin-bottom: 10px">{{ person.name }}</h1>
-          <p>{{ person.designation }}</p>
-          <p><i class="fa-solid fa-phone-volume"></i> {{ person.phone_number }}</p>
-          <p><i class="fa-solid fa-envelope"></i> {{ person.email}}</p>
-          <p><i class="fa-brands fa-facebook"></i> Facebook</p>
-        </div>
-      </a>
-    </div>
-    {% endfor %}
-  </div>
-</div>
 
+    <div class="row">
+      {% for person in teams reversed %}
+            <div class="col-md-6 mb-3 ">
+                <a href="{{ person.fb }}" class="author-card text-decoration-none shadow-lg">
+                    <!-- Left side (Image) -->
+                    <div>
+                        <img src="{{ person.image.url }}" alt="{{ person.name }} Image">
+                    </div>
+
+                    <!-- Right side (Name and Designation) -->
+                    <div class="author-details">
+                        <h3>{{ person.name }}</h3>
+                        <h6>{{ person.designation }}</h6>
+                        <h6><i class="fa-solid fa-phone-volume"></i> {{ person.phone_number }}</h6>
+                        <h6><i class="fa-solid fa-envelope"></i> {{ person.email }} </h6>
+                        <span><i class="fa-brands fa-facebook"></i> Facebook </span>
+                    </div>
+                </a>
+            </div>
+      {% endfor %}
+    </div>
+</div>
 {% endblock content %}
