enrollment is ok

--- a/templates/author_list.html
+++ b/templates/author_list.html
@@ -20,7 +20,7 @@
                         <h6>{{ author.designation }}</h6>
                         <h6>{{ author.phone_number }}</h6>
                         <h6>{{ author.email }} </h6>
-                        <span>Total Courses: {{ author.total_courses }} </span>
+                        <span><i class="fa-solid fa-play fa-sm"></i> Total Courses: {{ author.total_courses }} </span>
                     </div>
                 </a>
             </div>
