--- a/lms/static/assets/css/style.css
+++ b/lms/static/assets/css/style.css
@@ -2262,7 +2262,7 @@ html.menu-opened body {
 .course-group-img img {
 	max-width: 50px;
 	height: 50px;
-    border-radius: 25px;
+    border-radius: 5px;
 	margin-right: 10px;
 }
 .course-share {
@@ -12595,7 +12595,7 @@ input[type=password]::-ms-clear
 	width: 50px;
 	height: 50px;
 	border: 1px solid #E3E3E3;
-	border-radius: 50%;
+	/* border-radius: 50%; */
 }
 .instructor-wrap .rating {
 	width: unset;
