--- a/templates/enroll.html
+++ b/templates/enroll.html
@@ -25,12 +25,50 @@
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.text {
+        text-align: center;
+        padding: 20px;
+        background-color: #f2f2f2;
+        border-radius: 10px;
+    }
+
+    h1 {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    h4 {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    hr {
+        margin: 5px 0;
+        border: 1px solid #ddd;
+       
+    }
+
+    /* Media query for screens smaller than 600px */
+    @media only screen and (max-width: 600px) {
+        h1 {
+            font-size: 20px;
+        }
+
+        h4 {
+            font-size: 16px;
+        }
+    }
+
 </style>
 <div class="container enroll" style="margin-top: 120px;">
-    <h2>Enroll Course is <i class="fa-solid fa-arrow-right"></i> {{ course.title }}</h2>
-    <p >Course Price: {{ course.price|default:"Free" }} &#2547;  <span style="background-color: red; color:white">Payment on  Bkash/Nagod:</span> <i class="fa-solid fa-mobile"></i>  01575082901</p>
-
-    <form method="POST" action="{% url 'enroll' slug=course.slug %}">
+    <div class="text">
+        <h1>Course Price: {{ course.price|default:"Free" }} &#2547; <span style="background-color: red; color:white">Payment on Bkash/Nagod:</span> <i class="fa-solid fa-mobile"></i> 01575082901</h1>
+        <h4>Selected Course  <i class="fa-solid fa-arrow-right"></i> <a style="color: blue;" href="{% url 'course_details' course.slug %}">{{ course.title }}</a></h4>
+        <h4 style="color: red;">Without a UGV Student Portal Screenshot, Your Enrollment will be Unverified  </h4>
+      <hr>
+    </div>  
+    <form method="POST" action="{% url 'enroll' slug=course.slug %}" enctype="multipart/form-data">
         {% csrf_token %}
         {% crispy form %}
         <input type="hidden" name="course_price" value="{{ course.price }}">
